# langchain-course

./: .python-version   ingestion.py  main.py  pyproject.toml
