[project]
name = "langchain-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.11.0",
    "isort>=6.1.0",
    "langchain>=1.0.0",
    "langchain-openai>=0.3.35",
    "langchain-tavily>=0.2.11",
    "langgraph>=1.0.0",
    "python-dotenv>=1.2.1",
    "tavily>=1.1.0",
]